--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Alina's Asteroid Game!</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Made by Alina Liu for APCSA @ Lowell
+		    Press w to accelerate 
+		    press a or d to rotate
 	    </footer>
 	</body>
 </html>
