--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		    Made by Alina Liu for APCSA @ Lowell
 		    Press w to accelerate 
 		    press a or d to rotate
+		    press h for hyperspace
 	    </footer>
 	</body>
 </html>
