--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Made by Alina Liu for APCSA @ Lowell
 		    Press w to accelerate 
 		    press a or d to rotate
 		    press h for hyperspace
+		    press r to restart
 	    </footer>
 	</body>
 </html>
