--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press w to accelerate 
-		    press a or d to rotate
-		    press h for hyperspace
+		    Press w to accelerate <br>
+		    press a or d to rotate <br>
+		    press h for hyperspace <br>
 		    press r to restart
 	    </footer>
 	</body>
