--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		    press a or d to rotate <br>
 		    press h for hyperspace <br>
 		    press r to restart
+		    Press b to shoot bullets
 	    </footer>
 	</body>
 </html>
