--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		    Press w to accelerate <br>
 		    press a or d to rotate <br>
 		    press h for hyperspace <br>
-		    press r to restart
+		    press r to restart <br>
 		    Press b to shoot bullets
 	    </footer>
 	</body>
